--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,17 @@
   },
   "homepage": "https://github.com/MarcLindenbach/decision-mkr#readme",
   "devDependencies": {
-    "webpack": "^1.13.0"
+    "babel-core": "^6.7.6",
+    "babel-loader": "^6.2.4",
+    "file-loader": "^0.8.5",
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1"
   }
 }
