--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
     "file-loader": "^0.8.5",
+    "redux": "^3.5.2",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
   },
